# opencv_prj

./: .gitignore  cross_compile_cmake.txt
DetectBuoy/: CMakeLists.txt  DetectBuoy.cpp
DisplayImage/: CMakeLists.txt  DisplayImage  DisplayImage.cpp  Makefile
sequenceTest/: '  CMakeLists.txt  sequenceDetect.cpp
sequenceTest/methods/: .processing.cpp.swp  processing.cpp  processing.h
